plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.ryandens.javaagent-test' version '0.8.0'
}

group = 'com.coherentsolutions.pot'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}
configurations.configureEach {
	resolutionStrategy {
		force 'org.apache.commons:commons-compress:1.27.1'
	}
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.postgresql:postgresql'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:postgresql:1.21.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testJavaagent 'net.bytebuddy:byte-buddy-agent:1.15.11'
}

tasks.named('test') {
	useJUnitPlatform()
}
